--- a/conky.conf
+++ b/conky.conf
@@ -56,7 +56,7 @@ alignment = 'top_right',
 
 --Gap between borders of screen and text
 gap_x = 20,
-gap_y = 32,
+gap_y = 170,
 
 --Add spaces to keep things from moving about?  This only affects certain objects.
 use_spacer = 'left',
@@ -75,19 +75,19 @@ default_bar_height = 6
 conky.text = [[
 ${font Lato:size=15:style=bold}${color3}${time %R}   ${time %A}${color}${font}       ${alignr}${color3}${execi 300 date +"%x"}${color}
 
-${color3}${texeci 900 curl -s wttr.in/<yourcity>?format=%l:+%C+%t+%w+%p}${color}
+${color3}${texeci 900 curl -s wttr.in/Istanbul?format=%l:+%C+%t+%w+%p}${color}
 ${texeci 900 curl -s wttr.in/Istanbul?format=%l:+%C+%t+%w+%p}
 
 ${color1}${stippled_hr}${color}
 ${color1}ID/NET$color${alignr}$sysname ${color3}$kernel$color ${machine}
 ${color3}${execi 9000 whoami}$color @ $nodename ${alignr}Desktop ${color3}${desktop}$color of ${desktop_number}
 
-BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp60s0} BASE
-MAC :${COLOR3}${wireless_ap wlp60s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp60s0}$COLOR
+BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp2s0} BASE
+MAC :${COLOR3}${wireless_ap wlp2s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp2s0}$COLOR
 
-${color3}WiFi:$color${addr wlp60s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp60s0} %
-${color black}${upspeedgraph wlp60s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp60s0 20, 140 000000 FFA500}$color
-UP:${color3}  ${upspeed wlp60s0}/s$color      ${alignr}${color3}${downspeed wlp60s0}/s$color :DN
+${color3}WiFi:$color${addr wlp2s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp2s0} %
+${color black}${upspeedgraph wlp2s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp2s0 20, 140 000000 FFA500}$color
+UP:${color3}  ${upspeed wlp2s0}/s$color      ${alignr}${color3}${downspeed wlp2s0}/s$color :DN
 ${if_match "${addr eno1}"!="No Address"}
 ETH0:${addr eno1} ${alignr}${color3}SPD:$color${downspeedf eno1}kB/s
 ${color black}${upspeedgraph eno1 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph eno1 20, 140 000000 FFA500}$color
@@ -104,9 +104,10 @@ ${color1}$stippled_hr$color
 ${color1}MEM / HDD / IO$color ${alignr}
 
 RAM      ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
+SWAP   ${color3}${swapbar 5,140}$color ${alignr}${swapperc}/${swapmax}
 
 ${color3}Internal Storage$color
-/        ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
+/             ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
 Home     ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
 
 ${color1}$stippled_hr$color
@@ -116,12 +117,15 @@ ${color3}Proc${color}${processes}${alignc}  | ${color3}Running${color}${running_
 By CPU                MEM  CPU% ${alignr}User    PID
  ${color3}${top name 1} ${top mem_res 1}${top cpu 1} $alignr${top user 1}  ${top pid 1}$color
  ${top name 2} ${top mem_res 2}${top cpu 2} $alignr ${top user 2}  ${top pid 2}
+ ${top name 3} ${top mem_res 3}${top cpu 3} $alignr ${top user 3}  ${top pid 3}
 
 By MEM                MEM  CPU% ${alignr}User    PID
  ${color3}${top_mem name 1} ${top_mem mem_res 1}${top_mem cpu 1} $alignr ${top_mem user 1}  ${top_mem pid 1}$color
  ${top_mem name 2} ${top_mem mem_res 2}${top_mem cpu 2} $alignr ${top_mem user 2}  ${top_mem pid 2}
+ ${top_mem name 3} ${top_mem mem_res 3}${top_mem cpu 3} $alignr ${top_mem user 3}  ${top_mem pid 3}
 
 By I/O                MEM  CPU% ${alignr}User    PID
  ${color3}${top_io name 1} ${top_io mem_res 1}${top_io cpu 1} $alignr ${top_io user 1}  ${top_io pid 1}$color
  ${top_io name 2} ${top_io mem_res 2}${top_io cpu 2} $alignr ${top_io user 2}  ${top_io pid 2}
+ ${top_io name 3} ${top_io mem_res 3}${top_io cpu 3} $alignr ${top_io user 3}  ${top_io pid 3}
 ]]
