Updated for surface pro.

--- a/conky.conf
+++ b/conky.conf
@@ -82,12 +82,12 @@ ${color1}${stippled_hr}${color}
 ${color1}ID/NET$color${alignr}$sysname ${color3}$kernel$color ${machine}
 ${color3}${execi 9000 whoami}$color @ $nodename ${alignr}Desktop ${color3}${desktop}$color of ${desktop_number}
 
-BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp2s0} BASE
-MAC :${COLOR3}${wireless_ap wlp2s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp2s0}$COLOR
+BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp1s0} BASE
+MAC :${COLOR3}${wireless_ap wlp1s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp1s0}$COLOR
 
-${color3}WiFi:$color${addr wlp2s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp2s0} %
-${color black}${upspeedgraph wlp2s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp2s0 20, 140 000000 FFA500}$color
-UP:${color3}  ${upspeed wlp2s0}/s$color      ${alignr}${color3}${downspeed wlp2s0}/s$color :DN
+${color3}WiFi:$color${addr wlp1s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp1s0} %
+${color black}${upspeedgraph wlp1s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp1s0 20, 140 000000 FFA500}$color
+UP:${color3}  ${upspeed wlp1s0}/s$color      ${alignr}${color3}${downspeed wlp1s0}/s$color :DN
 ${if_match "${addr eno1}"!="No Address"}
 ETH0:${addr eno1} ${alignr}${color3}SPD:$color${downspeedf eno1}kB/s
 ${color black}${upspeedgraph eno1 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph eno1 20, 140 000000 FFA500}$color
@@ -97,8 +97,8 @@ ${color1}$stippled_hr$color
 ${color1}CPU${color} ${alignr}${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //' | cut -d' ' -f 3,6 | uniq} @ ${color3}${freq_g} GHz$color
 ${alignr}Usage:  ${color3}${cpu cpu0}%${color}
 CPU▼     Cores➤ ${alignr}0 ${color3}${cpubar cpu1 6,25}$color 1 ${color3}${cpubar cpu2 6,25}$color 2 ${color3}${cpubar cpu3 6,25}$color 3 ${color3}${cpubar cpu4 6,25}$color
-${color3}${cpubar cpu0 6,125}$color${alignr}4 ${color3}${cpubar cpu5 6,25}$color 5 ${color3}${cpubar cpu6 6,25}$color 6 ${color3}${cpubar cpu7 6,25}$color 7 ${color3}${cpubar cpu8 6,25}$color
-CPU: ${color3}${execi 10 sensors|grep 'CPU'|cut -d':' -f2|tr -d ' '}${color} ${alignr}Fan: ${color3}${execi 10 sensors | grep 'Fan'|tr -s ' '|cut -d' ' -f3,4}${color}
+${color3}${cpubar cpu0 6,125}$color${alignr}4 ${color3}$color
+CPU: ${color3}${exec sensors | grep 'Package id' | awk '{print $4}'}${color} 
 $alignc${color black}${cpugraph 20,320 000000 FFA500}$color   
 ${color1}$stippled_hr$color
 ${color1}MEM / HDD / IO$color ${alignr}
@@ -111,7 +111,7 @@ ${color3}Internal Storage$color
 Home     ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
 
 ${color1}$stippled_hr$color
-${color1}USAGE$color ${color3}BAT${color} ${battery BAT0}${alignr}${color3}Uptime:${color} $uptime_short
+${color1}USAGE$color ${color3}BAT${color} ${battery BAT1}${alignr}${color3}Uptime:${color} $uptime_short
 ${color3}Proc${color}${processes}${alignc}  | ${color3}Running${color}${running_processes} |${alignr}${color3}Avg:${color} $loadavg
 
 By CPU                MEM  CPU% ${alignr}User    PID
