Fixed font and alignments.

--- a/conky.conf
+++ b/conky.conf
@@ -18,7 +18,7 @@ own_window_argb_value = 128,
 out_to_console = false,
 use_xft = true,
 
-font = 'Hack:size=10:antialias=true',
+font = 'Ubuntu:style=Medium:size=10:antialias=true',
 update_interval = 1,
 
 --This is the number of times Conky will update before quitting
@@ -56,7 +56,7 @@ alignment = 'top_right',
 
 --Gap between borders of screen and text
 gap_x = 20,
-gap_y = 170,
+gap_y = 100,
 
 --Add spaces to keep things from moving about?  This only affects certain objects.
 use_spacer = 'left',
@@ -96,18 +96,18 @@ ${else}${endif}
 ${color1}$stippled_hr$color
 ${color1}CPU${color} ${alignr}${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //' | cut -d' ' -f 3,6 | uniq} @ ${color3}${freq_g} GHz$color
 ${alignr}Usage:  ${color3}${cpu cpu0}%${color}
-CPU▼     Cores➤ ${alignr}0 ${color3}${cpubar cpu1 6,25}$color 1 ${color3}${cpubar cpu2 6,25}$color 2 ${color3}${cpubar cpu3 6,25}$color 3 ${color3}${cpubar cpu4 6,25}$color
-${color3}${cpubar cpu0 6,125}$color${alignr}4 ${color3}$color
+CPU     			     Cores ${alignr}0 ${color3}${cpubar cpu1 6,25}$color 1 ${color3}${cpubar cpu2 6,25}$color 2 ${color3}${cpubar cpu3 6,25}$color 3 ${color3}${cpubar cpu4 6,25}$color
+${color3}${cpubar cpu0 6,125}$color
 CPU: ${color3}${exec sensors | grep 'Package id' | awk '{print $4}'}${color} 
 $alignc${color black}${cpugraph 20,320 000000 FFA500}$color   
 ${color1}$stippled_hr$color
 ${color1}MEM / HDD / IO$color ${alignr}
 
-RAM      ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
+RAM     ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
 SWAP   ${color3}${swapbar 5,140}$color ${alignr}${swapperc}/${swapmax}
 
 ${color3}Internal Storage$color
-/             ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
+/                ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
 Home     ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
 
 ${color1}$stippled_hr$color
