--- a/conky.conf
+++ b/conky.conf
@@ -18,7 +18,7 @@ own_window_argb_value = 128,
 out_to_console = false,
 use_xft = true,
 
-font = 'Ubuntu:style=Medium:size=10:antialias=true',
+font = 'Dejavu Sans Mono:size=9:antialias=true',
 update_interval = 1,
 
 --This is the number of times Conky will update before quitting
@@ -56,7 +56,7 @@ alignment = 'top_right',
 
 --Gap between borders of screen and text
 gap_x = 20,
-gap_y = 100,
+gap_y = 120,
 
 --Add spaces to keep things from moving about?  This only affects certain objects.
 use_spacer = 'left',
@@ -82,12 +82,12 @@ ${color1}${stippled_hr}${color}
 ${color1}ID/NET$color${alignr}$sysname ${color3}$kernel$color ${machine}
 ${color3}${execi 9000 whoami}$color @ $nodename ${alignr}Desktop ${color3}${desktop}$color of ${desktop_number}
 
-BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp1s0} BASE
-MAC :${COLOR3}${wireless_ap wlp1s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp1s0}$COLOR
+BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp60s0} BASE
+MAC :${COLOR3}${wireless_ap wlp60s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp60s0}$COLOR
 
-${color3}WiFi:$color${addr wlp1s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp1s0} %
-${color black}${upspeedgraph wlp1s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp1s0 20, 140 000000 FFA500}$color
-UP:${color3}  ${upspeed wlp1s0}/s$color      ${alignr}${color3}${downspeed wlp1s0}/s$color :DN
+${color3}WiFi:$color${addr wlp60s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp60s0} %
+${color black}${upspeedgraph wlp60s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp60s0 20, 140 000000 FFA500}$color
+UP:${color3}  ${upspeed wlp60s0}/s$color      ${alignr}${color3}${downspeed wlp60s0}/s$color :DN
 ${if_match "${addr eno1}"!="No Address"}
 ETH0:${addr eno1} ${alignr}${color3}SPD:$color${downspeedf eno1}kB/s
 ${color black}${upspeedgraph eno1 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph eno1 20, 140 000000 FFA500}$color
@@ -96,22 +96,22 @@ ${else}${endif}
 ${color1}$stippled_hr$color
 ${color1}CPU${color} ${alignr}${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //' | cut -d' ' -f 3,6 | uniq} @ ${color3}${freq_g} GHz$color
 ${alignr}Usage:  ${color3}${cpu cpu0}%${color}
-CPU     			     Cores ${alignr}0 ${color3}${cpubar cpu1 6,25}$color 1 ${color3}${cpubar cpu2 6,25}$color 2 ${color3}${cpubar cpu3 6,25}$color 3 ${color3}${cpubar cpu4 6,25}$color
-${color3}${cpubar cpu0 6,125}$color
-CPU: ${color3}${exec sensors | grep 'Package id' | awk '{print $4}'}${color} 
+CPU▼     Cores➤ ${alignr}0 ${color3}${cpubar cpu1 6,25}$color 1 ${color3}${cpubar cpu2 6,25}$color 2 ${color3}${cpubar cpu3 6,25}$color 3 ${color3}${cpubar cpu4 6,25}$color
+${color3}${cpubar cpu0 6,125}$color${alignr}4 ${color3}${cpubar cpu5 6,25}$color 5 ${color3}${cpubar cpu6 6,25}$color 6 ${color3}${cpubar cpu7 6,25}$color 7 ${color3}${cpubar cpu8 6,25}$color
+CPU: ${color3}${execi 10 sensors|grep 'CPU'|cut -d':' -f2|tr -d ' '}${color} ${alignr}Fan: ${color3}${execi 10 sensors | grep 'Fan'|tr -s ' '|cut -d' ' -f3,4 | tr '\n' ', '| head -c -1}${color}
 $alignc${color black}${cpugraph 20,320 000000 FFA500}$color   
 ${color1}$stippled_hr$color
 ${color1}MEM / HDD / IO$color ${alignr}
 
-RAM     ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
+RAM    ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
 SWAP   ${color3}${swapbar 5,140}$color ${alignr}${swapperc}/${swapmax}
 
 ${color3}Internal Storage$color
-/                ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
-Home     ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
+/      ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
+Home   ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
 
 ${color1}$stippled_hr$color
-${color1}USAGE$color ${color3}BAT${color} ${battery BAT1}${alignr}${color3}Uptime:${color} $uptime_short
+${color1}USAGE$color ${color3}BAT${color} ${battery BAT0}${alignr}${color3}Uptime:${color} $uptime_short
 ${color3}Proc${color}${processes}${alignc}  | ${color3}Running${color}${running_processes} |${alignr}${color3}Avg:${color} $loadavg
 
 By CPU                MEM  CPU% ${alignr}User    PID
