--- a/conky.conf
+++ b/conky.conf
@@ -17,8 +17,9 @@ own_window_argb_visual = true,
 own_window_argb_value = 128,
 out_to_console = false,
 use_xft = true,
+xinerama_head = 2,
 
-font = 'Dejavu Sans Mono:size=9:antialias=true',
+font = 'Hack:size=10:antialias=true',
 update_interval = 1,
 
 --This is the number of times Conky will update before quitting
@@ -30,7 +31,7 @@ own_window = true,
 
 --Use double buffering (reduces flicker, may not work for everyone)
 double_buffer = true,
-maximum_width = 320,
+maximum_width = 600,
 
 draw_shades = false,
 
@@ -56,7 +57,7 @@ alignment = 'top_right',
 
 --Gap between borders of screen and text
 gap_x = 20,
-gap_y = 120,
+gap_y = 140,
 
 --Add spaces to keep things from moving about?  This only affects certain objects.
 use_spacer = 'left',
@@ -68,7 +69,7 @@ no_buffers = true,
 --set to = true if you want all text to be in uppercase
 uppercase = false,
 
-default_bar_width = 140,
+default_bar_width = 600,
 default_bar_height = 6
 }
 
@@ -82,33 +83,47 @@ ${color1}${stippled_hr}${color}
 ${color1}ID/NET$color${alignr}$sysname ${color3}$kernel$color ${machine}
 ${color3}${execi 9000 whoami}$color @ $nodename ${alignr}Desktop ${color3}${desktop}$color of ${desktop_number}
 
-BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp60s0} BASE
-MAC :${COLOR3}${wireless_ap wlp60s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp60s0}$COLOR
+BCST:${color3}${texeci 60 curl -s https://icanhazip.com}$color ${alignr}${wireless_mode wlp17s0} BASE
+MAC :${COLOR3}${wireless_ap wlp17s0}$COLOR ${alignr}${COLOR3}${wireless_essid wlp17s0}$COLOR
 
-${color3}WiFi:$color${addr wlp60s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp60s0} %
-${color black}${upspeedgraph wlp60s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp60s0 20, 140 000000 FFA500}$color
-UP:${color3}  ${upspeed wlp60s0}/s$color      ${alignr}${color3}${downspeed wlp60s0}/s$color :DN
+${color3}WiFi:$color${addr wlp17s0} ${alignr}${color3}SIG:$color${wireless_link_qual_perc wlp17s0} %
+${color black}${upspeedgraph wlp17s0 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph wlp17s0 20, 140 000000 FFA500}$color
+UP:${color3}  ${upspeed wlp17s0}/s$color      ${alignr}${color3}${downspeed wlp17s0}/s$color :DN
 ${if_match "${addr eno1}"!="No Address"}
 ETH0:${addr eno1} ${alignr}${color3}SPD:$color${downspeedf eno1}kB/s
 ${color black}${upspeedgraph eno1 20, 140 000000 FFA500}$color ${color black}$alignr${downspeedgraph eno1 20, 140 000000 FFA500}$color
 UP:${color3}  ${upspeed eno1}/s$color      ${alignr}${color3}${downspeed eno1}/s$color :DN
 ${else}${endif}
 ${color1}$stippled_hr$color
-${color1}CPU${color} ${alignr}${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //' | cut -d' ' -f 3,6 | uniq} @ ${color3}${freq_g} GHz$color
+${color1}CPU${color} ${alignr}${execi 1000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //' | uniq} @ ${color3}${freq_g} GHz$color
 ${alignr}Usage:  ${color3}${cpu cpu0}%${color}
-CPU▼     Cores➤ ${alignr}0 ${color3}${cpubar cpu1 6,25}$color 1 ${color3}${cpubar cpu2 6,25}$color 2 ${color3}${cpubar cpu3 6,25}$color 3 ${color3}${cpubar cpu4 6,25}$color
-${color3}${cpubar cpu0 6,125}$color${alignr}4 ${color3}${cpubar cpu5 6,25}$color 5 ${color3}${cpubar cpu6 6,25}$color 6 ${color3}${cpubar cpu7 6,25}$color 7 ${color3}${cpubar cpu8 6,25}$color
-CPU: ${color3}${execi 10 sensors|grep 'CPU'|cut -d':' -f2|tr -d ' '}${color} ${alignr}Fan: ${color3}${execi 10 sensors | grep 'Fan'|tr -s ' '|cut -d' ' -f3,4 | tr '\n' ', '| head -c -1}${color}
+CPU▼     Cores➤ ${alignr}C1 ${color3}${cpubar cpu1 6,25}$color     C2 ${color3}${cpubar cpu2 6,25}$color   C3 ${color3}${cpubar cpu3 6,25}$color   C4 ${color3}${cpubar cpu4 6,25}$color
+$color${alignr}C5 ${color3}${cpubar cpu5 6,25}$color     C6 ${color3}${cpubar cpu6 6,25}$color   C7 ${color3}${cpubar cpu7 6,25}$color   C8 ${color3}${cpubar cpu8 6,25}$color
+${color3}${cpubar cpu0 6,125}$color${alignr}  C9 ${color3}${cpubar cpu9 6,25}$color    C10 ${color3}${cpubar cpu10 6,25}$color  C11 ${color3}${cpubar cpu11 6,25}$color  C12 ${color3}${cpubar cpu12 6,25}$color
+CPU: ${color3}${execi 10 sensors | grep 'CPU:' | awk '{print $2}' | tr -d '+'}${color} ${alignr}Fan: ${color3}${execi 10 sensors | grep 'CPU Fan:' | awk '{print $3 " " $4}'}${color}
 $alignc${color black}${cpugraph 20,320 000000 FFA500}$color   
+${color1}$stippled_hr$color
+${color1}GPU
+${color2}$stippled_hr$color
+GPU:   ${color3}${execi 10 lspci | awk -F'[][]' '/VGA/{print $3$4}' | sed 's/Navi 32//g' | awk '{gsub(/^ +| +$/,"")}1' | head -1}
+${color}Fan:   ${color2}${execi 10 sensors | grep 'fan1' | awk '{print $2 " " $3}'}
+${color}Temp:  ${color2}${execi 10 sensors | grep 'edge:' | awk '{print $2}' | head -1 | tr -d '+'}
+${color}Power: ${color2}${execi 10 sensors | grep 'PPT:' | awk '{print $2$3}' | head -1}
+${color2}$stippled_hr$color
+${color}APU:   ${color2}${color3}${execi 1000 lspci | awk -F'[][]' '/VGA/{print $3$4}' | sed 's/Navi 32//g' | awk '{gsub(/^ +| +$/,"")}1' | tail -1}
+${color}Temp:  ${color2}${execi 10 sensors | grep 'edge:' | awk '{print $2}' | tail -1 | tr -d '+'}
+${color}Power: ${color2}${execi 10 sensors | grep 'PPT:' | awk '{print $2$3}' | tail -1}
+
 ${color1}$stippled_hr$color
 ${color1}MEM / HDD / IO$color ${alignr}
 
-RAM    ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
-SWAP   ${color3}${swapbar 5,140}$color ${alignr}${swapperc}/${swapmax}
+RAM        ${color3}${membar 5,140}$color ${alignr}${mem}/${memmax}
+SWAP       ${color3}${swapbar 5,140}$color ${alignr}${swapperc}/${swapmax}
 
 ${color3}Internal Storage$color
-/      ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
-Home   ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
+/          ${color3}${fs_bar 5,140 /}$color ${alignr}${fs_used /}/${fs_size /}
+Home       ${color3}${fs_bar 5,140 /home/}$color ${alignr}${fs_used /home/}/${fs_size /home/}
+Archive    ${color3}${fs_bar 5,140 /mnt/LinuxArchive/}$color ${alignr}${fs_used /mnt/LinuxArchive/}/${fs_size /mnt/LinuxArchive/}
 
 ${color1}$stippled_hr$color
 ${color1}USAGE$color ${color3}BAT${color} ${battery BAT0}${alignr}${color3}Uptime:${color} $uptime_short
@@ -118,14 +133,17 @@ By CPU                MEM  CPU% ${alignr}User    PID
  ${color3}${top name 1} ${top mem_res 1}${top cpu 1} $alignr${top user 1}  ${top pid 1}$color
  ${top name 2} ${top mem_res 2}${top cpu 2} $alignr ${top user 2}  ${top pid 2}
  ${top name 3} ${top mem_res 3}${top cpu 3} $alignr ${top user 3}  ${top pid 3}
+ ${top name 4} ${top mem_res 4}${top cpu 4} $alignr ${top user 4}  ${top pid 4}
 
 By MEM                MEM  CPU% ${alignr}User    PID
  ${color3}${top_mem name 1} ${top_mem mem_res 1}${top_mem cpu 1} $alignr ${top_mem user 1}  ${top_mem pid 1}$color
  ${top_mem name 2} ${top_mem mem_res 2}${top_mem cpu 2} $alignr ${top_mem user 2}  ${top_mem pid 2}
  ${top_mem name 3} ${top_mem mem_res 3}${top_mem cpu 3} $alignr ${top_mem user 3}  ${top_mem pid 3}
+ ${top_mem name 4} ${top_mem mem_res 4}${top_mem cpu 4} $alignr ${top_mem user 4}  ${top_mem pid 4}
 
 By I/O                MEM  CPU% ${alignr}User    PID
  ${color3}${top_io name 1} ${top_io mem_res 1}${top_io cpu 1} $alignr ${top_io user 1}  ${top_io pid 1}$color
  ${top_io name 2} ${top_io mem_res 2}${top_io cpu 2} $alignr ${top_io user 2}  ${top_io pid 2}
  ${top_io name 3} ${top_io mem_res 3}${top_io cpu 3} $alignr ${top_io user 3}  ${top_io pid 3}
+ ${top_io name 4} ${top_io mem_res 4}${top_io cpu 4} $alignr ${top_io user 4}  ${top_io pid 4}
 ]]
